--- a/ThreeBits.Security.Portal/ThreeBits.Security.Portal.csproj
+++ b/ThreeBits.Security.Portal/ThreeBits.Security.Portal.csproj
@@ -1680,6 +1680,8 @@
     <Content Include="Views\Roles\Create.cshtml" />
     <Content Include="Views\Roles\CreateMenu.cshtml" />
     <Content Include="Views\Roles\EditMenu.cshtml" />
+    <Content Include="Views\Roles\CreateSubMenu.cshtml" />
+    <Content Include="Views\Roles\EditSubMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
